# pingora-demo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE
.github/workflows/: ci.yml
docs/: 01-policy-and-promotions.md  02-multi-tier-implementation.md  03-trait-abstraction-design.md  04-invariants.md  05-session-guide.md  06-mvp-architecture.md  README.md
docs/diagrams/: 01-architecture-overview.mmd  02-cache-hit-flow.mmd  03-cache-miss-flow.mmd  04-sync-async-promotions.mmd  05-policy-decision.mmd  06-cold-cache-miss.mmd  07-l3-hit-promotions.mmd  08-l0-hit-hotpath.mmd  09-trait-abstraction.mmd  10-l3-internal-flow.mmd  11-l3-sequence-miss-hit.mmd  12-deployment-options.mmd  13-wiring-example.mmd  14-complete-system-flow.mmd  15-manifest-data-model.mmd
src/: cache.rs  lib.rs  policy.rs  proxy.rs
src/storage/: durable.rs  memory.rs  mod.rs  multi_tier.rs  traits.rs
tasks/: mvp-checklist.md  todo.md
tests/: storage.rs
