[package]
name = "pingora-demo"
version = "0.1.0"
edition = "2024"

[features]
default = ["multi-tier"]
multi-tier = []

[dependencies]
async-trait = "0.1"
blake3 = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

# Pingora proxy framework
pingora-proxy = "0.6"
pingora-core = "0.6"
pingora-http = "0.6"
pingora-error = "0.6"
bytes = "1"
http = "1"
